--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
   "dependencies": {
     "jsonwebtoken": "^8.3.0",
     "jwk-to-pem": "^2.0.0",
-    "request": "^2.88.0",
-    "request-promise": "^4.2.2"
+    "request": "^2.88.0"
   }
 }
