--- a/package.json
+++ b/package.json
@@ -25,8 +25,6 @@
     "mocha": "^5.2.0"
   },
   "dependencies": {
-    "jsonwebtoken": "^8.3.0",
-    "jwk-to-pem": "^2.0.0",
-    "request": "^2.88.0"
+    "aws-cognito-jwt-authenticate": "^1.0.1"
   }
 }
