--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "authenticates api gateway request for a cognito user pool",
   "main": "index.js",
   "scripts": {
-    "test": "mocha test tests --reporter spec"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -21,8 +21,7 @@
   },
   "homepage": "https://github.com/ajstocchetti/apigw-cognito-authorizer#readme",
   "devDependencies": {
-    "chai": "^4.1.2",
-    "mocha": "^5.2.0"
+    "jest": "^25.4.0"
   },
   "dependencies": {
     "aws-cognito-jwt-authenticate": "^1.0.1"
